# file-sync

./: .gitignore  Makefile  Plan.md  README.md  client.c  file-client.c  file-server.c  protocol.c  protocol.h  protocol.md  server.c  server5.c  todo.md  util.c  util.h
c/: client.c
c/common/: download.c  download.h  file_list.c  file_list.h  protocol.c  protocol.h  upload.c  upload.h  util.c
common/: download.c  download.h  file_list.c  file_list.h  protocol.c  protocol.h  upload.c  upload.h  util.c  util.h
cpp/: .clang-format  .gitignore  CMakeLists.txt
cpp/src/: client.cpp  server.cpp
cpp/src/lib/: FileDescriptor.cpp  FileDescriptor.h  FileHash.cpp  FileHash.h  FileInfo.cpp  FileInfo.h  Socket.cpp  Socket.h  download.cpp  download.h  protocol.cpp  protocol.h  upload.cpp  upload.h  util.h
cpp/src/lib/protocol/: serial.cpp  serial.h  structs.cpp  structs.h
java/: .gitignore  Server  build.sh
java/src/: Client.java  Server.java
java/src/sync/: FileHash.java  FileInfo.java  Serialize.java  Sync.java  SyncHandler.java
java/src/sync/messages/: BitField.java  ClientConnect.java  Download.java  DownloadFile.java  DownloadResponse.java  Error.java
